Migrate build system to maven